[package]
name = "dirt-jam"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_egui = "0.35"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
  "wayland",
  "bevy_asset",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gizmos",
  "bevy_render",
  "bevy_sprite",
  "bevy_window",
  "bevy_winit",
  "multi_threaded",
  "std",
  "bevy_log"
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

